--- a/Geo4.tex
+++ b/Geo4.tex
@@ -234,6 +234,29 @@ $$ax+by+c=0$$
 $$(x-a)^2+(y-b)^2=r^2$$ or
 $$x^2+y^2+ax+by+c=0$$
 \subsubsection{Examples}
+Example 1:\\
+$x^2+2x+y^2+4x+2=0$\\
+$x^2+2x+1+y^2+4x+4=3$\\
+$(x+1)^2+(y+2)^2=(\sqrt{3})^2$
+
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,337); %set diagram left start at 0, and has height of 337
+
+%Shape: Grid [id:dp09064694594513245] 
+\draw  [draw opacity=0] (58.64,106.92) -- (229.67,106.92) -- (229.67,221.25) -- (58.64,221.25) -- cycle ; \draw   (58.64,106.92) -- (58.64,221.25)(71.28,106.92) -- (71.28,221.25)(83.92,106.92) -- (83.92,221.25)(96.55,106.92) -- (96.55,221.25)(109.19,106.92) -- (109.19,221.25)(121.83,106.92) -- (121.83,221.25)(134.46,106.92) -- (134.46,221.25)(147.1,106.92) -- (147.1,221.25)(159.74,106.92) -- (159.74,221.25)(172.38,106.92) -- (172.38,221.25)(185.01,106.92) -- (185.01,221.25)(197.65,106.92) -- (197.65,221.25)(210.29,106.92) -- (210.29,221.25)(222.92,106.92) -- (222.92,221.25) ; \draw   (58.64,106.92) -- (229.67,106.92)(58.64,119.56) -- (229.67,119.56)(58.64,132.2) -- (229.67,132.2)(58.64,144.83) -- (229.67,144.83)(58.64,157.47) -- (229.67,157.47)(58.64,170.11) -- (229.67,170.11)(58.64,182.75) -- (229.67,182.75)(58.64,195.38) -- (229.67,195.38)(58.64,208.02) -- (229.67,208.02)(58.64,220.66) -- (229.67,220.66) ; \draw    ;
+%Shape: Axis 2D [id:dp3391291012826534] 
+\draw [color={rgb, 255:red, 255; green, 0; blue, 0 }  ,draw opacity=1 ][line width=2.25]  (36.72,170.16) -- (259.72,170.16)(159.06,88.35) -- (159.06,248.16) (252.72,165.16) -- (259.72,170.16) -- (252.72,175.16) (154.06,95.35) -- (159.06,88.35) -- (164.06,95.35)  ;
+%Shape: Circle [id:dp5118138149603966] 
+\draw   (129.54,144.83) .. controls (129.54,135.14) and (137.4,127.28) .. (147.1,127.28) .. controls (156.8,127.28) and (164.66,135.14) .. (164.66,144.83) .. controls (164.66,154.53) and (156.8,162.39) .. (147.1,162.39) .. controls (137.4,162.39) and (129.54,154.53) .. (129.54,144.83) -- cycle ;
+
+
+
+
+\end{tikzpicture}\\\\
+Example 2:
 
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
@@ -241,12 +264,6 @@ $$x^2+y^2+ax+by+c=0$$
 \begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
 %uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
 
-%Straight Lines [id:da5485385098063555] 
-\draw    (156.93,207.03) -- (156.93,49.03) ;
-\draw [shift={(156.93,47.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da9244581279454482] 
-\draw    (57.01,141.1) -- (266.01,140.42) ;
-\draw [shift={(268.01,140.42)}, rotate = 179.81] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
 %Straight Lines [id:da40962903604479894] 
 \draw    (401.93,207.03) -- (401.93,49.03) ;
 \draw [shift={(401.93,47.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
@@ -260,14 +277,13 @@ $$x^2+y^2+ax+by+c=0$$
 \draw [shift={(454.99,94.01)}, rotate = 36.56] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
 
 % Text Node
-\draw (86,214) node [anchor=north west][inner sep=0.75pt]   [align=left] {x\textasciicircum 2+2x+y\textasciicircum 2+4x+2=0};
-% Text Node
 \draw (486.99,108.01) node [anchor=north west][inner sep=0.75pt]   [align=left] {(3,4)};
 % Text Node
 \draw (485,69) node [anchor=north west][inner sep=0.75pt]   [align=left] {r=1};
 
 
-\end{tikzpicture}
+\end{tikzpicture}\\
+$(x-3)^2+(y-4)^2=1$ or $x^2 - 6 x + y^2 - 8 y + 24 = 0$
 
 \subsection{Point to Line Distance Formula}
 
@@ -278,9 +294,8 @@ The distance between the line $ax+by+c = 0$ and point $(x_1,y_1)$ is\[\dfrac{|ax
 
 \subsection{Intersection}
 \subsubsection{How to find intersection between two curve?}
-\vspace{20px}
+Solve the system of equations.
 \subsubsection{Example}
-
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
@@ -304,13 +319,19 @@ The distance between the line $ax+by+c = 0$ and point $(x_1,y_1)$ is\[\dfrac{|ax
 \draw (402,43) node [anchor=north west][inner sep=0.75pt]   [align=left] {2x-y=4};
 
 
-\end{tikzpicture}
+\end{tikzpicture}\\
+Sub $y=2x-4$ into $(x-4)^2+(y-3)^2=2$, \\
+we get $(x-4)^2+(2x-4-3)^2=2$.\\
+After solving, we get $x=3$ or $\frac{21}{5}.$\\
+Therefore, the intersections are (3,2) and (21/5,22/5).
 
-\vspace{100px}
 
 \subsubsection{Find the Radical Axis of Two Circles}
-Definition: \\ \\ \\
-Find the radical axis bewteen $x^2+y^2=5$ and $x^2+3x+y^2-7y+3=0$.
+Definition: The line that passes through the intersections of the circles.\\
+Find the radical axis bewteen $x^2+y^2=5$ and $x^2+3x+y^2-7y+3=0$.\\\\
+Let P and Q be the intersection, Q and P must satisfy both $x^2+y^2=5$ and $x^2+3x+y^2-7y+3=0$, therefore the difference $3x-7y+3=-5$.\\
+Since this line $ 3x-7y+8=0$ passes through P and Q, it must be the radical axis of two circles.
+
 
 
 
@@ -318,118 +339,133 @@ Find the radical axis bewteen $x^2+y^2=5$ and $x^2+3x+y^2-7y+3=0$.
 
 \section{Vector}
 \subsection{Definition}
-\vspace{20px}
+"A quality that has both magnitude and direction."-physicist.\\
+or an ordered pair (a,b)
 \subsection{Visual Representation}
 
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
 \begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.7,xscale=.7]
-%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
 
-%Straight Lines [id:da40962903604479894] 
-\draw    (259.01,280.03) -- (259.01,38.03) ;
-\draw [shift={(259.01,36.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da02167311792978177] 
-\draw    (98.01,179.49) -- (436.01,178.45) ;
-\draw [shift={(438.01,178.45)}, rotate = 179.82] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da7156592326299953] 
-\draw    (258.01,179.03) -- (341.27,132.01) ;
-\draw [shift={(343.01,131.03)}, rotate = 150.55] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Shape: Axis 2D [id:dp8227522849695434] 
+\draw  (90,274.97) -- (381.72,274.97)(135.72,83.83) -- (135.72,313.97) (374.72,269.97) -- (381.72,274.97) -- (374.72,279.97) (130.72,90.83) -- (135.72,83.83) -- (140.72,90.83)  ;
+%Straight Lines [id:da6629542579141938] 
+\draw    (135.72,274.97) -- (251.04,201.05) ;
+\draw [shift={(252.72,199.97)}, rotate = 147.34] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+
+% Text Node
+\draw (250,183.83) node [anchor=north west][inner sep=0.75pt]   [align=left] {(a,b)};
 
 
 \end{tikzpicture}
 
 \subsection{Addition, Substraction and Scalar Multiplication of Vectors}
 \subsubsection{Addition of Vectors}
-Algebra:\\ \\
+Algebra: $(a,b)+(c,d)=(a+c,b+d)$\\
 Geometry:
+
 
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.6,xscale=.6]
-%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
 
-%Straight Lines [id:da40962903604479894] 
-\draw    (259.01,280.03) -- (259.01,38.03) ;
-\draw [shift={(259.01,36.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da02167311792978177] 
-\draw    (98.01,179.49) -- (436.01,178.45) ;
-\draw [shift={(438.01,178.45)}, rotate = 179.82] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da7156592326299953] 
-\draw    (258.01,179.03) -- (300.89,115.68) ;
-\draw [shift={(302.01,114.03)}, rotate = 124.09] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da4792480491525051] 
-\draw    (258.01,179.03) -- (339.41,239.83) ;
-\draw [shift={(341.01,241.03)}, rotate = 216.76] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Shape: Axis 2D [id:dp8227522849695434] 
+\draw  (90,221.97) -- (287.97,221.97)(121.03,83.83) -- (121.03,250.16) (280.97,216.97) -- (287.97,221.97) -- (280.97,226.97) (116.03,90.83) -- (121.03,83.83) -- (126.03,90.83)  ;
+%Straight Lines [id:da6629542579141938] 
+\draw    (121.03,221.97) -- (164.15,146.51) ;
+\draw [shift={(165.14,144.78)}, rotate = 119.74] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da9375942755586781] 
+\draw    (121.03,221.97) -- (246.63,238.47) ;
+\draw [shift={(248.61,238.73)}, rotate = 187.48] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da4798526727664101] 
+\draw    (165.14,144.78) -- (290.74,161.28) ;
+\draw [shift={(292.72,161.54)}, rotate = 187.48] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da485626268479008] 
+\draw    (248.61,238.73) -- (291.73,163.28) ;
+\draw [shift={(292.72,161.54)}, rotate = 119.74] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da5449315364612841] 
+\draw    (121.03,221.97) -- (290.83,162.2) ;
+\draw [shift={(292.72,161.54)}, rotate = 160.61] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
 
 % Text Node
-\draw (282.01,149.53) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
+\draw (133.02,166.88) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
 % Text Node
-\draw (301.51,213.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {v};
+\draw (190.03,231.93) node [anchor=north west][inner sep=0.75pt]   [align=left] {v};
+% Text Node
+\draw (211.74,151.7) node [anchor=north west][inner sep=0.75pt]   [align=left] {v};
+% Text Node
+\draw (270.78,194.34) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
+% Text Node
+\draw (189.65,175.55) node [anchor=north west][inner sep=0.75pt]   [align=left] {u+v};
 
 
 \end{tikzpicture}
 
 \subsubsection{Substraction of Vectors}
-Algebra:\\ \\
+Algebra:$(a,b)-(c,d)=(a-c,b-d)$ \\
 Geometry:
+
 
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.6,xscale=.6]
-%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
 
-%Straight Lines [id:da40962903604479894] 
-\draw    (259.01,280.03) -- (259.01,38.03) ;
-\draw [shift={(259.01,36.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da02167311792978177] 
-\draw    (98.01,179.49) -- (436.01,178.45) ;
-\draw [shift={(438.01,178.45)}, rotate = 179.82] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da7156592326299953] 
-\draw    (258.01,179.03) -- (300.89,115.68) ;
-\draw [shift={(302.01,114.03)}, rotate = 124.09] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da4792480491525051] 
-\draw    (258.01,179.03) -- (339.41,239.83) ;
-\draw [shift={(341.01,241.03)}, rotate = 216.76] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Shape: Axis 2D [id:dp8227522849695434] 
+\draw  (90,221.97) -- (287.97,221.97)(121.03,83.83) -- (121.03,250.16) (280.97,216.97) -- (287.97,221.97) -- (280.97,226.97) (116.03,90.83) -- (121.03,83.83) -- (126.03,90.83)  ;
+%Straight Lines [id:da6629542579141938] 
+\draw    (121.03,221.97) -- (164.15,146.51) ;
+\draw [shift={(165.14,144.78)}, rotate = 119.74] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da9375942755586781] 
+\draw    (121.03,221.97) -- (246.63,238.47) ;
+\draw [shift={(248.61,238.73)}, rotate = 187.48] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da5449315364612841] 
+\draw    (248.61,238.73) -- (166.47,146.27) ;
+\draw [shift={(165.14,144.78)}, rotate = 48.38] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
 
 % Text Node
-\draw (282.01,149.53) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
+\draw (133.02,166.88) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
 % Text Node
-\draw (301.51,213.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {v};
+\draw (190.03,231.93) node [anchor=north west][inner sep=0.75pt]   [align=left] {v};
+% Text Node
+\draw (215.65,176.55) node [anchor=north west][inner sep=0.75pt]   [align=left] {u-v};
 
 
 \end{tikzpicture}
+
 
 \subsubsection{Scalar Multiplication of Vector}
 
-Algebra:\\ \\
+Algebra: $c(a,b)=(ac,bc)$ \\
 Geometry:
 
 
 \tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
 
-\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-.6,xscale=.6]
-%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
 
-%Straight Lines [id:da40962903604479894] 
-\draw    (259.01,280.03) -- (259.01,38.03) ;
-\draw [shift={(259.01,36.03)}, rotate = 90] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da02167311792978177] 
-\draw    (98.01,179.49) -- (436.01,178.45) ;
-\draw [shift={(438.01,178.45)}, rotate = 179.82] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
-%Straight Lines [id:da7156592326299953] 
-\draw    (258.01,179.03) -- (300.89,115.68) ;
-\draw [shift={(302.01,114.03)}, rotate = 124.09] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Shape: Axis 2D [id:dp8227522849695434] 
+\draw  (90,221.97) -- (287.97,221.97)(121.03,83.83) -- (121.03,250.16) (280.97,216.97) -- (287.97,221.97) -- (280.97,226.97) (116.03,90.83) -- (121.03,83.83) -- (126.03,90.83)  ;
+%Straight Lines [id:da6629542579141938] 
+\draw    (121.03,221.97) -- (164.15,146.51) ;
+\draw [shift={(165.14,144.78)}, rotate = 119.74] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da9375942755586781] 
+\draw    (121.03,221.97) -- (186.71,109.89) ;
+\draw [shift={(187.72,108.16)}, rotate = 120.37] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
 
 % Text Node
-\draw (282.01,149.53) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
+\draw (133.02,166.88) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
+% Text Node
+\draw (148,124) node [anchor=north west][inner sep=0.75pt]   [align=left] {cu};
 
 
 \end{tikzpicture}
-
 
 \subsection{Dot Product}
 
@@ -439,33 +475,91 @@ $$x \cdot y = x_1y_1+x_2y_2$$
 
 \subsubsection{Property: Dot Product}
 \begin{itemize}
-    \item positivity:
-    \item definiteness:
-    \item additivity:
-    \item homogeneity:
-    \item symmetry:
+    \item positivity: $v\cdot v\ge 0$
+    \item definiteness: $v\cdot v = 0$ iff $v=0$
+    \item additivity: $(v+u)\cdot(w)=v\cdot w + u \cdot w$ or 
+    \item homogeneity: $c(u\cdot v)=(cu)\cdot v$
+    \item symmetry: $u \cdot v = v \cdot u$
 \end{itemize}
 
 \subsubsection{Dot Product and Metric}
-\vspace{40px}
+$v\cdot v = |v|^2$
 
 \subsubsection{Penpendicularity}
+$v\cdot u=0$ if $v$ and $u$ are perpendicular to each other. 
 \pagebreak
 
 \subsubsection{Dot Product and Cosine Law}
-\vspace{100px}
 
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
+
+%Straight Lines [id:da17404312810320866] 
+\draw    (124.72,196.76) -- (243.1,91.49) ;
+\draw [shift={(244.6,90.16)}, rotate = 138.35] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da1385073769185674] 
+\draw    (124.72,196.76) -- (374.74,230.34) ;
+\draw [shift={(376.72,230.6)}, rotate = 187.65] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da4938978023656899] 
+\draw    (244.6,90.16) -- (375.35,229.15) ;
+\draw [shift={(376.72,230.6)}, rotate = 226.75] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+
+% Text Node
+\draw (167.15,131.86) node [anchor=north west][inner sep=0.75pt]   [align=left] {a};
+% Text Node
+\draw (236.28,214.78) node [anchor=north west][inner sep=0.75pt]   [align=left] {b};
+% Text Node
+\draw (317.72,148.79) node [anchor=north west][inner sep=0.75pt]   [align=left] {b-a};
+% Text Node
+\draw (148,179) node [anchor=north west][inner sep=0.75pt]   [align=left] {$\theta$};
+
+
+\end{tikzpicture}\\
+$$(b-a)\cdot(b-a)=b \cdot b+ a \cdot a - 2 a \cdot b$$
+Compare with cosine law:
+$$c^2=a^2+b^2-2ab\cos(C)$$
+Therefore,
+$$a\cdot b =|a||b|\cos(\theta)$$
 \subsubsection{Dot Product as Projection}
-\vspace{100px}
 
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
+
+%Straight Lines [id:da637575067913835] 
+\draw    (133.72,284.16) -- (185.95,159.01) ;
+\draw [shift={(186.72,157.16)}, rotate = 112.65] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da6495955178480797] 
+\draw    (133.72,284.16) -- (287.77,248.61) ;
+\draw [shift={(289.72,248.16)}, rotate = 167.01] [color={rgb, 255:red, 0; green, 0; blue, 0 }  ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+%Straight Lines [id:da8569645157359189] 
+\draw  [dash pattern={on 0.84pt off 2.51pt}]  (186.72,157.16) -- (211.72,266.16) ;
+%Straight Lines [id:da7064326740913383] 
+\draw [color={rgb, 255:red, 255; green, 0; blue, 0 }  ,draw opacity=1 ]   (133.72,284.16) -- (209.77,266.61) ;
+\draw [shift={(211.72,266.16)}, rotate = 167.01] [color={rgb, 255:red, 255; green, 0; blue, 0 }  ,draw opacity=1 ][line width=0.75]    (10.93,-3.29) .. controls (6.95,-1.4) and (3.31,-0.3) .. (0,0) .. controls (3.31,0.3) and (6.95,1.4) .. (10.93,3.29)   ;
+
+% Text Node
+\draw (145,196) node [anchor=north west][inner sep=0.75pt]   [align=left] {u};
+% Text Node
+\draw (228,267) node [anchor=north west][inner sep=0.75pt]   [align=left] {v};
+
+
+\end{tikzpicture}\\
+The projection of u on v is $$\frac{u \cdot v}{|v|}$$
+\pagebreak
 \subsubsection{Problem (1975 USAMO Q2)}
 Let $A,B,C,D$ denote four points in space and $AB$ the distance between $A$ and $B$, and so on. Show that\[AC^2+BD^2+AD^2+BC^2\ge AB^2+CD^2.\]
+Let $a$, $b$, $c$, $d$ correspond to the position vectors of points A, B, C, and D, respectively, with respect to an arbitrary origin O. Let us also for simplicity define $a^2 = a \cdot a = ||a||^2$, where $||a||$ is the magnitude of vector $a$. Because squares are non-negative, $a^2$ is non-negative for all vectors $a$. Thus,\[(a + b - c - d)^2 \ge 0\]Because dot product is linear, we expand to obtain\[a^2 + b^2 + c^2 + d^2 + 2a \cdot b + 2 c \cdot d - 2 a \cdot c - 2 a \cdot d - 2 b \cdot c - 2 c \cdot d \ge 0,\]from which we add $a^2 + b^2 + c^2 + d^2$ to both sides, rearrange, and complete the square to get\[(a-c)^2 + (a-d)^2 + (b-c)^2 + (b-d)^2 \ge (a-b)^2 + (c-d)^2.\]As $(a-b)^2 = ||a-b||^2 = ||AB||^2 = AB^2$ and likewise for the others,\[AC^2 + AD^2 + BC^2 + BD^2 \ge AB^2 + CD^2,\]which is what we wanted to prove.
 
 \pagebreak
 
 \subsection{Determinant}
 \subsubsection{Definition}
-\vspace*{20px}
+The area of the parallelogram formed by 2 vectors, namely $(a,c)$ and $(b,d)$.
 \subsubsection{Formula}
 
 $
@@ -473,11 +567,12 @@ $
     a & b\\
     c & d
 \end{vmatrix}
-=
+= ad-bc
 $
 
 \subsubsection{3D Determinant and Area of a Triangle}
-Definition:\\ \\
+Definition:
+The volume of the parallelepiped formed by 3 vectors, namely $(a,d,h), (b,e,i), (c,f,j)$.\\
 Formula:
 $$
 \begin{vmatrix}
@@ -501,27 +596,18 @@ $$
    h  & i
 \end{vmatrix}
 $$
-Area of a Triangle with Vertex $A(x_1,y_1), B(x_2,y_2), C(x_3,y_3)$ is \\ \\ \\
-
+Area of a Triangle with Vertex $A(x_1,y_1), B(x_2,y_2), C(x_3,y_3)$ is 
+$$
+\begin{vmatrix}
+    1 & 1 & 1\\
+    x_1 & x_2 & x_3\\
+    y_1 & y_2 & y_3
+\end{vmatrix}
+$$
 \subsubsection{Shoelace Theorem}
 
 Suppose the polygon $P$ has vertices $(a_1, b_1)$, $(a_2, b_2)$, ... , $(a_n, b_n)$, listed in clockwise order. Then the area ($A$) of $P$ is
 
 \[A = \dfrac{1}{2} \left|\sum_{i=1}^n{\det\begin{pmatrix}x_i&x_{i+1}\\y_i&y_{i+1}\end{pmatrix}}\right|\]
-Proof
-
-\pagebreak
-\section*{Appendix: Mathematical Induction}
-
-Mathematical Induction is a special way of proving things. It has only 2 steps:
-\begin{itemize}
-    \item Step 1. Show it is true for the first one
-    \item Step 2. Show that if any one is true then the next one is true
-\end{itemize}
-Then all are true
-
-
-\subsection*{Example}
-$$1^2+2^2+3^2+...+n^2=\frac{n(n+1)(2n+1)}{6}$$
 
 \end{document}
