--- a/Geo4.tex
+++ b/Geo4.tex
@@ -486,7 +486,7 @@ $$x \cdot y = x_1y_1+x_2y_2$$
 $v\cdot v = |v|^2$
 
 \subsubsection{Penpendicularity}
-$v\cdot u=0$ if $v$ and $u$ are perpendicular to each other. 
+$v\cdot u=0$ iff $v$ and $u$ are perpendicular to each other. 
 \pagebreak
 
 \subsubsection{Dot Product and Cosine Law}
