--- a/Geo3.tex
+++ b/Geo3.tex
@@ -172,7 +172,7 @@ $$a\sin C=c\sin A$$
 $$\frac{c}{\sin C}=\frac{a}{\sin A}$$\\
 
 $$abc=4RS$$
-$$abd=\frac{4ab\sin C}{2}R$$
+$$abc=\frac{4ab\sin C}{2}R$$
 $$c=2\sin CR$$
 $$\frac{c}{\sin C}=2R$$
 Therefore, 
