--- a/Geo3.tex
+++ b/Geo3.tex
@@ -249,7 +249,7 @@ c^2&=a^2+b^2-2ab\cos C\\
 Substitute 1 into 2: 
 \begin{align*} 
 \sin C&=\sqrt{1-(\frac{a^2+b^2-c^2}{2ab})^2}\\
-&=\frac{\sqrt{(2ab+a^2+b^2-c^2)\times (2ab-a^2-b^2+c^2}}{2ab}\\
+&=\frac{\sqrt{(2ab+a^2+b^2-c^2)\times (2ab-a^2-b^2+c^2)}}{2ab}\\
 &=\frac{\sqrt{(a+b-c)\times (a+b+c)\times (c-a+b)\times (c+a-b)}}{2ab}
 \end{align*}
 Substitute into $S=\frac{ab\sin C}{2}$:
