--- a/Combo1.tex
+++ b/Combo1.tex
@@ -202,7 +202,7 @@ $mCn=C(m,n)=$
 \subsection{Combination Problems}
 
 
-\subsection{Star and Bars}
+\subsection{Stars and Bars}
 
 \section{Pascal Triangle}
 
