--- a/Combo1.tex
+++ b/Combo1.tex
@@ -190,12 +190,12 @@ Grace is making a bracelet with 8 beads that are all different colours. How many
 \subsubsection{Definition}
 \vspace{20px}
 \subsubsection{Notation}
-$mCn=C(m,n)=$
+$mCn={m \choose n}=$
 \subsubsection{Examples}
 \begin{itemize}
     \item $5C3=$
-    \item $C(7,2)=$
-    \item Prove $C(n,r)=C(n,n-r)$ 
+    \item ${7 \choose 2}=$
+    \item Prove $ {n \choose r} = {n \choose n-r} $ 
 \end{itemize}
 \pagebreak
 
