--- a/Combo1.tex
+++ b/Combo1.tex
@@ -173,7 +173,7 @@ How many ways can 12 basketball players be assigned to four triple rooms?
 
 \subsection{Grouping}
 \subsubsection{Example}
-Math Club is taking yearbook photo one day with 20 memebers and Mr.Fraschetti and Mr.Gatti lining in a row. If Mr.Fraschetti and Mr.Gatti insist to stand together, how many arrangements are there?
+Math Club is taking yearbook photo one day with 20 members and Mr.Fraschetti and Mr.Gatti lining in a row. If Mr.Fraschetti and Mr.Gatti insist to stand together, how many arrangements are there?
 \vspace{20px}
 \subsubsection{Problem}
 At a recent conference of the 11 premiers (including the Prime Minister), find the number of different group photos possible if Lucien Bouchard and Jean Chretien
