--- a/Combo1.tex
+++ b/Combo1.tex
@@ -88,7 +88,7 @@ Consider the flag:
 If 10 colours are provided, how many ways are there to colour the flag so that no 2 adjacent regions have the same colour.
 \vspace{20px}
 
-\subsection{Indirect/Complemnetary Counting}
+\subsection{Indirect/Complementary Counting}
 \subsubsection{Example 1}
 How many positive integers less than $100$ are not a multiple of five?
 \vspace{20px}
