--- a/Combo1.tex
+++ b/Combo1.tex
@@ -181,7 +181,7 @@ refused to stand next to each other and if the premiers arranged themselves in a
 \vspace{20px}
 \subsection{Circular}
 \subsubsection{Example}
-How many arrangements are there if 8 people sitting around a circluar table?
+How many arrangements are there if 8 people sitting around a circular table?
 \vspace{20px}
 \subsubsection{Problem}
 Grace is making a bracelet with 8 beads that are all different colours. How many bracelets can she make if the bracelet has no visible clasp?
@@ -208,7 +208,7 @@ $mCn={m \choose n}=$
 
 \subsection{Pascal Triangle}
 
-\subsection{Binomial Theorem and Multinomial Theorem}
+\subsection{Binomial Theorem and Multi-nomial Theorem}
 
 \subsection{Pascal Routes}
 
