--- a/Combo1.tex
+++ b/Combo1.tex
@@ -8,7 +8,7 @@
 \usepackage{graphicx}
 \usepackage{amssymb}
 \usepackage{tikz}
-
+\usepackage{array}
 
 \title{Combinatorics}
 \author{TSS Math Club}
@@ -201,26 +201,157 @@ $mCn={m \choose n}=$
 
 \subsection{Combination Problems}
 
+\subsubsection{Problem}
+Find the number of different five-card hands that could be dealt from a deck of 52 cards.
+\vspace{20px}
+
+\subsubsection{Problem}
+From a group of 14 Conservatives, 12 Litkrals, eight NDP, and two Independent Members of Parliament, how many different committees can be formed consisting of three Conservatives, three Liberals, two NDP, and one Independent member?
+\vspace{20px}
+
+\subsubsection{Problem}
+How many divisors of 4200 are there?
+\vspace{20px}
 
 \subsection{Stars and Bars}
+\subsubsection{Example}
+Find positive integers $m,n,k$ such that $m+n+k = 20$.
+\vspace{50px}
+\subsubsection{Example}
+Find non-negative integers $m,n,k$ such that $m+n+k = 20$.
+\vspace{50px}
+
+\subsubsection{Problem}
+If one wishes to count the number of ways to distribute seven indistinguishable one dollar coins among Amber, Ben, and Curtis so that each of them receives at least one dollar.
+\pagebreak
 
 \section{Pascal Triangle}
 
 \subsection{Pascal Triangle}
+\begin{tabular}{>{$n=}l<{$\hspace{12pt}}*{13}{c}}
+    0 &&&&&&&1&&&&&&\\
+    1 &&&&&&1&&1&&&&&\\
+    2 &&&&&1&&2&&1&&&&\\
+    3 &&&&1&&3&&3&&1&&&\\
+    4 &&&1&&4&&6&&4&&1&&\\
+    5 &&1&&5&&10&&10&&5&&1&\\
+    6 &1&&6&&15&&20&&15&&6&&1
+\end{tabular}
+\subsubsection{Pascal’s Triangle Construction}
+\vspace{50px}
+\subsubsection{The Fundamental Relationship and Combination}
+\vspace{50px}
+\subsubsection{Addition of the Rows}
+\vspace{50px}
+\subsubsection{Hockey Stick Theorem}
+\vspace{50px}
 
-\subsection{Binomial Theorem and Multi-nomial Theorem}
+\subsection{Binomial Theorem}
+
+\subsubsection{Observation}
+Expand/FOIL $(x+y)^1$, $(x+y)^2$, $(x+y)^3$.
+\pagebreak
+
+\subsubsection{Binomial Theorem}
+$$(a+b)^n = \sum_{k=0}^{n}\binom{n}{k}a^{n-k}b^k$$
+Proof:
+\vspace{50px}
+\subsubsection{Proof of Addition of the Rows}
+\vspace{50px}
+
+\subsection{Generating Function}
+\subsubsection{Example}
+Prove: $$\sum _{i+j=n} {m \choose i}{k \choose j} = {m+k \choose n}$$
+\vspace{100px}
 
 \subsection{Pascal Routes}
+\subsubsection{Example}
+Determine the number of paths from A to B, traveling downward and to the right.
+
+
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
+
+%Shape: Grid [id:dp8969890479428493] 
+\draw  [draw opacity=0] (99,118) -- (315.05,118) -- (315.05,247.16) -- (99,247.16) -- cycle ; \draw   (99,118) -- (99,247.16)(142,118) -- (142,247.16)(185,118) -- (185,247.16)(228,118) -- (228,247.16)(271,118) -- (271,247.16)(314,118) -- (314,247.16) ; \draw   (99,118) -- (315.05,118)(99,161) -- (315.05,161)(99,204) -- (315.05,204)(99,247) -- (315.05,247) ; \draw    ;
+
+% Text Node
+\draw (87,100) node [anchor=north west][inner sep=0.75pt]   [align=left] {A};
+% Text Node
+\draw (316,250) node [anchor=north west][inner sep=0.75pt]   [align=left] {B};
+
+
+\end{tikzpicture}
+\pagebreak
+\subsubsection{Problem}
+Determine the number of paths from A to B, traveling downward and to the right.
+
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,585); %set diagram left start at 0, and has height of 585
+
+%Shape: Grid [id:dp8969890479428493] 
+\draw  [draw opacity=0] (99,118) -- (272.05,118) -- (272.05,247.16) -- (99,247.16) -- cycle ; \draw   (99,118) -- (99,247.16)(142,118) -- (142,247.16)(185,118) -- (185,247.16)(228,118) -- (228,247.16)(271,118) -- (271,247.16) ; \draw   (99,118) -- (272.05,118)(99,161) -- (272.05,161)(99,204) -- (272.05,204)(99,247) -- (272.05,247) ; \draw    ;
+%Shape: Grid [id:dp6506262394114295] 
+\draw  [draw opacity=0] (142,161) -- (358.05,161) -- (358.05,290.16) -- (142,290.16) -- cycle ; \draw   (142,161) -- (142,290.16)(185,161) -- (185,290.16)(228,161) -- (228,290.16)(271,161) -- (271,290.16)(314,161) -- (314,290.16)(357,161) -- (357,290.16) ; \draw   (142,161) -- (358.05,161)(142,204) -- (358.05,204)(142,247) -- (358.05,247)(142,290) -- (358.05,290) ; \draw    ;
+%Shape: Grid [id:dp24570983351657527] 
+\draw  [draw opacity=0] (314,204) -- (401.05,204) -- (401.05,333.16) -- (314,333.16) -- cycle ; \draw   (314,204) -- (314,333.16)(357,204) -- (357,333.16)(400,204) -- (400,333.16) ; \draw   (314,204) -- (401.05,204)(314,247) -- (401.05,247)(314,290) -- (401.05,290)(314,333) -- (401.05,333) ; \draw    ;
+
+% Text Node
+\draw (87,100) node [anchor=north west][inner sep=0.75pt]   [align=left] {A};
+% Text Node
+\draw (402,336) node [anchor=north west][inner sep=0.75pt]   [align=left] {B};
+
+
+\end{tikzpicture}
+\vspace{50px}
 
 \section{Probability}
 
-\subsection{Discrete}
+\subsection{Definition}
+The probability of an event is a number that indicates how likely the event is to occur.\\
+Mathematical Definition:$$P(A)=\frac{\text{Number of times A happens}}{\text{Sample Space}}$$
 
-\subsection{Continuous}
+\subsubsection{Discrete}
+\begin{itemize}
+    \item Example 1: A pair of dice are rolled, what is the probability of getting a sum of 7? \vspace{40px}
+    \item Example 2: 6 coins are tossed, what is the probability of getting a 2 head?
+\end{itemize}
+\pagebreak
 
-\subsection{Conditional Probability}
+\subsubsection{Continuous}
+\begin{itemize}
+    \item Example 1: Point A is chosen randomly in $[0,2]\times[0,2]$, what's the probability that OA is less than 1.?\vspace{40px}
+    \item Example 2: 2 points are chosen randomly in [0,1], what's the probability that their distance is less than 0.5.  \vspace{40px}
+    \item Example 3: Point A is chosen randomly in $[0,1]$, what's the probability that A is 0.25.?\vspace{40px}
+\end{itemize}
+\subsection{Some Formulae about Probability}
+\begin{itemize}
+    \item  $P(E \cap F)=P(E)P(F)$ if E and F are independent events.
+    \item  $P(E \cup F)=P(E)+P(F)-P(E \cap F)$.
+    \item  $P(E|F)	=	\frac{P(E \cap F)}{P(F)}$.
+\end{itemize}
 
-\section{Problems}
-
-
+\subsubsection{Example}
+What's the probability of tossing 3 heads in a row?
+\vspace{30px}
+\subsubsection{Example}
+A pair of dice are rolled, what is the probability of getting a sum of 7 given that one of them is 6?
+\vspace{30px}
+\subsubsection{Example}
+An integer is randomly chosen in [1,100],  what is the probability that it is a multiple of 2 or 5?
+\vspace{30px}
+\pagebreak
+\subsection{Expected Value}
+$$E = \sum \text{outcome}\times P(\text{outcome})$$
+\subsubsection{Example}
+A local club plans to invest \$10000 to host a baseball game. They expect to sell tickets worth \$15000 . But if it rains on the day of game, they won't sell any tickets and the club will lose all the money invested. If the weather forecast for the day of game is 20\% possibility of rain, is this a good investment?
+\vspace{50px}
+\subsubsection{Example}
+If Adam rolls a die repeatedly until he obtains a 6, what is the anticipated number of times he will need to roll the die?
 \end{document}
