--- a/Combo1.tex
+++ b/Combo1.tex
@@ -249,7 +249,7 @@ If one wishes to count the number of ways to distribute seven indistinguishable 
 \subsection{Binomial Theorem}
 
 \subsubsection{Observation}
-Expand/FOIL $(x+y)^1$, $(x+y)^2$, $(x+y)^3$.
+Expand/FOIL $(a+b)^1$, $(a+b)^2$, $(a+b)^3$.
 \pagebreak
 
 \subsubsection{Binomial Theorem}
