--- a/Combo1.tex
+++ b/Combo1.tex
@@ -48,7 +48,7 @@ How many ways are there for 5 people to stand in a row?
 \vspace{20px}
 \pagebreak
 \subsubsection{Example 1}
-Calvin wants to go to Milwaukee. He can choose from 3 3 bus services or 2 2
+Calvin wants to go to Milwaukee. He can choose from 3 bus services or 3
 train services to head from home to downtown Chicago. From there, he can choose
 from 2 bus services or 3 train services to head to Milwaukee. How many ways are
 there for Calvin to get to Milwaukee?
