--- a/Number Theory 1.tex
+++ b/Number Theory 1.tex
@@ -19,5 +19,44 @@
 
 \maketitle
 
+\section{Integers}
+\subsection{Division with Remainder}
+\subsubsection{Example}
+Find the quotient and remainder when 102 is divided 5.
+\vspace{20px}
+\subsubsection{Example}
+Find the quotient and remainder when 213 is divided 7.
+\vspace{20px}
+\subsection{Divisibility}
+\subsubsection{Definition}
+\vspace{20px}
+\subsubsection{Notation}
+$a|b$
+\subsubsection{Theorems}
+\begin{itemize}
+    \item $a|b \text{ and } b|c \implies a|c$
+    \item $a|b \implies a|cb$
+    \item $a|b \text{ and } a|c \implies a|mb+nc$
+\end{itemize}
+
+\subsection{GCD and LCM}
+\subsubsection{Defnition}
+\begin{itemize}
+    \item GCD:
+    \item LCM:
+\end{itemize}
+\subsubsection{Notations}
+\begin{itemize}
+    \item GCD:
+    \item LCM:
+\end{itemize}
+
+\subsubsection{Example}
+\begin{itemize}
+    \item (10,5)=\hspace{74px}[10,5]=
+    \item (3,2)=\hspace{80px}[3,2]=
+    \item (0,n)=\hspace{80px}[0,n]=
+    \item (n,1)=\hspace{80px}[n,1]=
+\end{itemize}
 
 \end{document}
